src/test/ui/pattern/bindings-after-at/copy-and-move-mixed.stderr
warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/copy-and-move-mixed.rs:3:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/copy-and-move-mixed.rs:12:9
   |
LL |     let a @ NC(b, c) = NC(C, C);
   |         ^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/copy-and-move-mixed.rs:16:9
   |
LL |     let a @ NC(b, c @ NC(d, e)) = NC(C, NC(C, C));
   |         ^^^^^^^^^^^^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/copy-and-move-mixed.rs:16:19
   |
LL |     let a @ NC(b, c @ NC(d, e)) = NC(C, NC(C, C));
   |                   ^^^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0382]: use of moved value
  --> $DIR/copy-and-move-mixed.rs:12:19
   |
LL |     let a @ NC(b, c) = NC(C, C);
   |         ----------^-   -------- move occurs because value has type `NC<C, C>`, which does not implement the `Copy` trait
   |         |         |
   |         |         value used here after move
   |         value moved here

error[E0382]: use of moved value
  --> $DIR/copy-and-move-mixed.rs:16:19
   |
LL |     let a @ NC(b, c @ NC(d, e)) = NC(C, NC(C, C));
   |         ----------^^^^^^^^^^^^-   --------------- move occurs because value has type `NC<C, NC<C, C>>`, which does not implement the `Copy` trait
   |         |         |
   |         |         value used here after move
   |         value moved here

error[E0382]: use of moved value
  --> $DIR/copy-and-move-mixed.rs:16:29
   |
LL |     let a @ NC(b, c @ NC(d, e)) = NC(C, NC(C, C));
   |                   ----------^-
   |                   |         |
   |                   |         value used here after move
   |                   value moved here
   |
   = note: move occurs because value has type `NC<C, C>`, which does not implement the `Copy` trait

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0007, E0382.
For more information about an error, try `rustc --explain E0007`.
